# hwss_example

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.esp32c3  sdkconfig.esp32s3  sdkconfig.old
components/hwss/: CMakeLists.txt  Kconfig  hwss.c  hwss_dhcp.c  hwss_event.c  hwss_hso_scm.c  hwss_netif.c  hwss_sockets.c  hwss_type.c
components/hwss/eth/: hwss_cctl.c  hwss_cvr.c  hwss_eth.c  hwss_eth_event.c  hwss_hir.c  hwss_hnet.c  hwss_hppe.c  hwss_hsl.c  hwss_hso.c  hwss_hso_scm.c  hwss_io.c  hwss_mac.c  hwss_phy.c  hwss_sir.c  hwss_sscm.c  hwss_sscm_drv.c
components/hwss/eth/include/: hwss_cctl.h  hwss_cvr.h  hwss_eth.h  hwss_eth_config.h  hwss_eth_event.h  hwss_eth_opt.h  hwss_eth_sku.h  hwss_eth_type.h  hwss_hdc.h  hwss_hir.h  hwss_hnet.h  hwss_hppe.h  hwss_hsl.h  hwss_hso.h  hwss_io.h  hwss_io_base.h  hwss_lpw.h  hwss_mac.h  hwss_phy.h  hwss_sir.h  hwss_sku.h  hwss_sscm.h  hwss_sscm_drv.h
components/hwss/eth/io/: hwss_io_spi_basic.h  hwss_io_spi_pro.c  hwss_io_spi_pro.h
components/hwss/eth/wch/: hwss_cctl_wch.h  hwss_cvr_wch.h  hwss_io_wch.h  hwss_mac_wch.h  hwss_phy_wch.h  hwss_sir_wch.h  hwss_sscm_drv_wch.h
components/hwss/eth/wch/ch394/: ch394.h  drv_ch394.h  hwss_cctl_ch394.c  hwss_cvr_ch394.c  hwss_hso_ch394.c  hwss_io_ch394.c  hwss_mac_ch394.c  hwss_phy_ch394.c  hwss_sir_ch394.c  hwss_sscm_drv_ch394.c
components/hwss/eth/wiznet/: hwss_cctl_wiznet.h  hwss_cvr_wiznet.h  hwss_hnet_wiznet.h  hwss_hppe_wiznet.h  hwss_hsl_wiznet.h  hwss_hso_wiznet.h  hwss_io_wiznet.h  hwss_io_wiznet_base.h  hwss_mac_wiznet.h  hwss_phy_wiznet.h  hwss_sir_wiznet.h  hwss_sscm_drv_wiznet.h  hwss_wiznet.h
components/hwss/eth/wiznet/w5100s/: drv_w5100s.h  hwss_cctl_w5100s.c  hwss_cvr_w5100s.c  hwss_hnet_w5100s.c  hwss_hppe_w5100s.c  hwss_hsl_w5100s.c  hwss_hso_w5100s.c  hwss_io_w5100s.c  hwss_mac_w5100s.c  hwss_phy_w5100s.c  hwss_sir_w5100s.c  hwss_sscm_drv_w5100s.c  w5100s.h
components/hwss/eth/wiznet/w5500/: drv_w5500.h  hwss_cctl_w5500.c  hwss_cvr_w5500.c  hwss_hnet_w5500.c  hwss_hppe_w5500.c  hwss_hso_w5500.c  hwss_io_w5500.c  hwss_mac_w5500.c  hwss_phy_w5500.c  hwss_sir_w5500.c  hwss_sscm_drv_w5500.c  hwss_sscm_w5500.c  w5500.h
components/hwss/eth/wiznet/w6100/: drv_w6100.h  hwss_io_w6100.c  w6100.h
components/hwss/generic/: hwss_eth.h  hwss_hdc.h  hwss_hir.c  hwss_hir.h  hwss_hnet.h  hwss_hsl.h  hwss_hso.h  hwss_hso_scm.c  hwss_hso_scm.h  hwss_io.h  hwss_lpw.h  hwss_mac.h  hwss_phy.h
components/hwss/include/: hwss.h  hwss_cache.h  hwss_dhcp.h  hwss_event.h  hwss_hip.h  hwss_hnet.h  hwss_hpp.h  hwss_hso.h  hwss_hso_scm.h  hwss_hsock.h  hwss_io.h  hwss_ip_addr.h  hwss_mac.h  hwss_netif.h  hwss_opt.h  hwss_phy.h  hwss_sockets.h  hwss_type.h
components/hwss/netif/: hwss_netif.c
components/hwss/netif/include/: hwss_netif.h  hwss_netif_types.h
components/hwss/spi_pro/: hwss_spi_pro.c  hwss_spi_pro.h
components/hwss/wiznet/: drv_w5100s.h  drv_w5500.h  hwss_hip_w5500.c  hwss_hip_wiznet.h  hwss_hnet_w5500.c  hwss_hnet_wiznet.h  hwss_hpp_w5500.c  hwss_hpp_wiznet.h  hwss_hsl_wiznet.h  hwss_hso_w5500.c  hwss_hso_wiznet.h  hwss_io_w5500.c  hwss_io_wiznet.c  hwss_io_wiznet.h  hwss_io_wiznet_base.h  hwss_mac_w5500.c  hwss_mac_wiznet.h  hwss_phy_w5100s.c  hwss_phy_w5500.c  hwss_phy_wiznet.h  w5100s.h  w5500.h
components/hwss/wiznet/w5100s/: drv_w5100s.h  hwss_hnet_w5100s.c  hwss_hsl_w5100s.c  hwss_hso_w5100s.c  hwss_mac_w5100s.c  hwss_phy_w5100s.c  w5100s.h
components/hwss/wiznet/w5500/: drv_w5500.h  hwss_hnet_w5500.c  hwss_hso_w5500.c  hwss_io_w5500.c  hwss_phy_w5500.c  w5500.h
components/usock/: CMakeLists.txt  Kconfig.projbuild  usock.h
main/: CMakeLists.txt  main.c
